<resources>
    <string name="app_name">The Test App</string>
    <string name="select_cate">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="phones">Phones</string>
    <string name="computers">Computers</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="sport">Sport</string>
    <string name="zihuatanejo">Zihuatanejo, Gro</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_text">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="text_for_size">4.5 to 5.5 inches</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="text_select_c_n_c">Select color and capacity</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
</resources>