<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_background_bottom_sheet"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44sp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_close_btn" />

        </RelativeLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/markpro"
            android:letterSpacing="-0.02"
            android:text="@string/filter_options"
            android:textAlignment="center"
            android:textColor="@color/black_from_figma"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_background_done_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/markpro"
                android:letterSpacing="-0.02"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44sp"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/markpro"
            android:letterSpacing="-0.02"
            android:text="@string/brand"
            android:textColor="@color/black_from_figma"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--Change it-->

<!--    <Spinner
        android:id="@+id/spinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37sp"
        android:layout_marginStart="44sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:gravity="top"
        android:orientation="vertical">

<!--        <Spinner
            android:id="@+id/spinner_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@drawable/ic_background_category_bottom_sheet" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/markpro"
                            android:gravity="center_vertical"
                            android:letterSpacing="-0.02"
                            android:paddingStart="14sp"
                            android:text="Samsung"
                            android:textColor="@color/black_from_figma"
                            android:textSize="18sp"
                            tools:ignore="RtlSymmetry" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:paddingEnd="20sp"
                            android:src="@drawable/ic_arrow_for_bottom_sheet" />

                    </LinearLayout>

                </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44sp"
        android:layout_marginTop="10sp"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/markpro"
            android:letterSpacing="-0.02"
            android:text="@string/price"
            android:textColor="@color/black_from_figma"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--Change it-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37sp"
        android:layout_marginStart="44sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_background_category_bottom_sheet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/markpro"
                    android:gravity="center_vertical"
                    android:letterSpacing="-0.02"
                    android:paddingStart="14sp"
                    android:text="$300 - $500"
                    android:textColor="@color/black_from_figma"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingEnd="20sp"
                    android:src="@drawable/ic_arrow_for_bottom_sheet" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44sp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/markpro"
            android:letterSpacing="-0.02"
            android:text="@string/size"
            android:textColor="@color/black_from_figma"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37sp"
        android:layout_marginStart="44sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="44sp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_background_category_bottom_sheet" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/markpro"
                    android:gravity="center_vertical"
                    android:letterSpacing="-0.02"
                    android:paddingStart="14sp"
                    android:text="@string/text_for_size"
                    android:textColor="@color/black_from_figma"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingEnd="20sp"
                    android:src="@drawable/ic_arrow_for_bottom_sheet" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>