<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.cart.CartActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36sp"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42sp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_left_btn" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="35sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="9sp"
                            android:layout_weight="1"
                            android:fontFamily="@font/markpro"
                            android:letterSpacing="-0.02"
                            android:text="@string/add_address"
                            android:textAlignment="center"
                            android:textColor="@color/black_from_figma"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_location_cart_btn" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="42sp"
                android:layout_marginBottom="49sp"
                android:orientation="horizontal"
                android:paddingTop="62sp">

                <TextView
                    android:id="@+id/hot_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/markpro"
                    android:letterSpacing="-0.01"
                    android:text="@string/my_cart"
                    android:textColor="@color/black_from_figma"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_background_bottom_sheet"
                android:backgroundTint="@color/black_from_figma"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="170sp"
                    android:gravity="center">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cartRV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        tools:listitem="@layout/cart_container" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="4dp"
                    android:background="@color/grey_for_first_cart_line"
                    tools:ignore="SmallSp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="55sp"
                    android:paddingTop="15sp"
                    android:paddingEnd="35sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="2"
                        android:fontFamily="@font/markpro"
                        android:gravity="top"
                        android:letterSpacing="-0.02"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/markpro"
                        android:gravity="end"
                        android:letterSpacing="-0.02"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="$6,000 us" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="55sp"
                    android:paddingTop="12sp"
                    android:paddingEnd="35sp"
                    android:paddingBottom="26sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="2"
                        android:fontFamily="@font/markpro"
                        android:gravity="top"
                        android:letterSpacing="-0.02"
                        android:text="@string/delivery"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/delivery_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/markpro"
                        android:gravity="end"
                        android:letterSpacing="-0.02"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Free" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="4dp"
                    android:background="@color/grey_for_second_cart_line"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44sp"
                    android:layout_marginTop="27sp"
                    android:layout_marginEnd="44sp"
                    android:layout_marginBottom="44sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:layout_width="326sp"
                            android:layout_height="54sp"
                            android:background="@drawable/ic_background_add_to_cart_btn" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/markpro"
                            android:letterSpacing="-0.02"
                            android:text="@string/checkout"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>